--- a/src/main/resources/com/xuyufei/marketsystem/merUserMain.fxml
+++ b/src/main/resources/com/xuyufei/marketsystem/merUserMain.fxml
@@ -10,15 +10,15 @@
     <items>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
             <children>
-                <Button fx:id="goodsBtn" layoutX="6.0" layoutY="59.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="我的商品" />
-                <Button fx:id="salesBtn" layoutX="6.0" layoutY="101.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="我的折扣" />
+                <Button fx:id="goodsBtn" layoutX="6.0" layoutY="59.0" mnemonicParsing="false" onAction="#goodsMode" prefHeight="29.0" prefWidth="119.0" text="我的商品" />
+                <Button fx:id="salesBtn" disable="true" layoutX="6.0" layoutY="101.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="我的折扣" />
                 <Button fx:id="discoutBtn" disable="true" layoutX="6.0" layoutY="144.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="全平台折扣" visible="false" />
                 <Label fx:id="nameLabel" layoutX="6.0" layoutY="14.0" prefHeight="29.0" prefWidth="119.0" text="name" textAlignment="CENTER">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Label>
-            <Button fx:id="exitBtn" onAction="#exit" layoutX="6.0" layoutY="345.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="退出" />
+            <Button fx:id="exitBtn" layoutX="6.0" layoutY="345.0" mnemonicParsing="false" onAction="#exit" prefHeight="29.0" prefWidth="119.0" text="退出" />
             </children></AnchorPane>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
             <children>
