--- a/src/main/resources/com/xuyufei/marketsystem/superUserMain-ban.fxml
+++ b/src/main/resources/com/xuyufei/marketsystem/superUserMain-ban.fxml
@@ -14,7 +14,7 @@
             <children>
                 <Button fx:id="banBtn" layoutX="6.0" layoutY="59.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="封禁/解封" />
                 <Button fx:id="takeDownBtn" layoutX="6.0" layoutY="101.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="强制下架" />
-                <Button fx:id="discoutBtn" layoutX="6.0" layoutY="144.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="全平台折扣" />
+                <Button fx:id="discoutBtn" disable="true" layoutX="6.0" layoutY="144.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="119.0" text="全平台折扣" />
                 <Label fx:id="nameLabel" layoutX="6.0" layoutY="14.0" prefHeight="29.0" prefWidth="119.0" text="name" textAlignment="CENTER">
                     <font>
                         <Font size="20.0" />
@@ -31,8 +31,8 @@
                   <TableColumn fx:id="status" prefWidth="79.42857360839844" text="封禁状态" />
               </columns>
             </TableView>
-            <Button id="banBtn" onAction="#ban" layoutX="22.0" layoutY="23.0" mnemonicParsing="false" text="封禁" />
-            <Button id="unbanBtn" onAction="#unban" layoutX="77.0" layoutY="23.0" mnemonicParsing="false" text="解封" />
+            <Button id="banBtn" layoutX="22.0" layoutY="23.0" mnemonicParsing="false" onAction="#ban" text="封禁" />
+            <Button id="unbanBtn" layoutX="77.0" layoutY="23.0" mnemonicParsing="false" onAction="#unban" text="解封" />
          </children></AnchorPane>
     </items>
 </SplitPane>
