--- a/src/main/resources/com/xuyufei/marketsystem/loginWindow.fxml
+++ b/src/main/resources/com/xuyufei/marketsystem/loginWindow.fxml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.xuyufei.marketsystem.controller.LoginWindowController">
-   <children>
-      <TextField fx:id="usernameInput" layoutX="238.0" layoutY="129.0" />
-      <Label layoutX="200.0" layoutY="129.0" prefHeight="26.0" prefWidth="27.0" text="账户" />
-      <Label layoutX="200.0" layoutY="183.0" prefHeight="26.0" prefWidth="27.0" text="密码" />
-      <Button id="loginBtn" layoutX="214.0" onAction="#login" layoutY="251.0" mnemonicParsing="false" text="登录" />
-      <Button id="exitBtn" layoutX="330.0" onAction="#exit" layoutY="251.0" mnemonicParsing="false" text="退出" />
-      <PasswordField fx:id="passwordInput" layoutX="233.0" layoutY="183.0" />
-      <Label fx:id="wrongInputPrompt" layoutX="233.0" layoutY="218.0" prefHeight="18.0" prefWidth="151.0" text="" />
-      <Label layoutX="223.0" layoutY="303.0" prefHeight="18.0" prefWidth="88.0" text="还没有账号？" />
-      <Button fx:id="registerBtn" layoutX="329.0" layoutY="296.0" onAction="#register" mnemonicParsing="false" prefHeight="31.0" prefWidth="54.0" text="注册" />
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.xuyufei.marketsystem.controller.LoginWindowController">
+<children>
+   <TextField fx:id="usernameInput" layoutX="233.0" layoutY="129.0" />
+   <Label layoutX="200.0" layoutY="129.0" prefHeight="26.0" prefWidth="27.0" text="账户" />
+   <Label layoutX="200.0" layoutY="183.0" prefHeight="26.0" prefWidth="27.0" text="密码" />
+   <Button id="loginBtn" layoutX="238.0" layoutY="251.0" mnemonicParsing="false" onAction="#login" text="登录" />
+   <Button id="exitBtn" layoutX="329.0" layoutY="251.0" mnemonicParsing="false" onAction="#exit" text="退出" />
+   <PasswordField fx:id="passwordInput" layoutX="233.0" layoutY="183.0" />
+   <Label fx:id="wrongInputPrompt" layoutX="233.0" layoutY="218.0" prefHeight="18.0" prefWidth="151.0" text="" />
+   <Label layoutX="233.0" layoutY="318.0" prefHeight="18.0" prefWidth="88.0" text="还没有账号？" />
+   <Button fx:id="registerBtn" layoutX="329.0" layoutY="311.0" minHeight="18.0" minWidth="47.0" mnemonicParsing="false" onAction="#register" prefHeight="31.0" prefWidth="47.0" text="注册">
+      <font>
+         <Font size="10.0" />
+      </font></Button>
+</children>
 </AnchorPane>
