--- a/src/main/resources/com/xuyufei/marketsystem/superUserMain.fxml
+++ b/src/main/resources/com/xuyufei/marketsystem/superUserMain.fxml
@@ -11,13 +11,8 @@
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
             <children>
                 <Button fx:id="banBtn" layoutX="6.0" layoutY="59.0" mnemonicParsing="false" onAction="#banMode" prefHeight="29.0" prefWidth="119.0" text="封禁/解封" />
-                <Button fx:id="takeDownBtn" layoutX="6.0" layoutY="101.0" mnemonicParsing="false" onAction="#takeDownMode" prefHeight="29.0" prefWidth="119.0" text="强制下架" />
+                <Button fx:id="takeDownBtn" disable="true" layoutX="6.0" layoutY="101.0" mnemonicParsing="false" onAction="#takeDownMode" prefHeight="29.0" prefWidth="119.0" text="强制下架" />
                 <Button fx:id="discountBtn" disable="true" layoutX="6.0" layoutY="144.0" mnemonicParsing="false" onAction="#discountMode" prefHeight="29.0" prefWidth="119.0" text="全平台折扣" />
-                <Label fx:id="nameLabel" layoutX="6.0" layoutY="14.0" prefHeight="29.0" prefWidth="119.0" text="name" textAlignment="CENTER">
-                    <font>
-                        <Font size="20.0" />
-                    </font>
-                </Label>
                 <Button fx:id="exitBtn" layoutX="6.0" layoutY="345.0" mnemonicParsing="false" onAction="#exit" prefHeight="29.0" prefWidth="119.0" text="退出" />
             </children></AnchorPane>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
